tips added,ui changed

--- a/ClientApp/src/assets/i18n/ru.json
+++ b/ClientApp/src/assets/i18n/ru.json
@@ -1,3 +1,6 @@
 {
-  "HELLO_WORLD":"Hello World"
+  "HELP1": "Выберите первый блок",
+  "HELP2": "Выберите второй блок",
+  "HELP3": "Выберите третий блок",
+  "HELP4": "Выберите тии и язык обучения"
 }
