change string by language pipe added

--- a/ClientApp/src/assets/i18n/ru.json
+++ b/ClientApp/src/assets/i18n/ru.json
@@ -1,6 +1,25 @@
 {
+  "firstBlok": "первый блок",
+  "secondBlok": "второй блок",
+
+
   "HELP1": "Выберите первый блок",
   "HELP2": "Выберите второй блок",
   "HELP3": "Выберите третий блок",
-  "HELP4": "Выберите тии и язык обучения"
+  "HELP4": "Выберите тии и язык обучения",
+
+  "BeginTest": "Начать тест",
+  "Reset": "Сбросить",
+  "Language": "Язык",
+  "EduType": "Тип",
+  "NoOneUniversity": "К сожалению вы не смогли бы постутить ни в один ВУЗ",
+  "Retry": "Еще раз",
+  "UniversityList": "Посмотреть в какие вузы мог бы поступить",
+  "FinishQuiz": "Завершить",
+  "Subjects": "Предметы",
+  "NoSubject": "Данные отсутствуют",
+  "SearchPlaceHolder": "Название университета..."
+
+
+
 }
