--- a/ClientApp/src/assets/i18n/uz.json
+++ b/ClientApp/src/assets/i18n/uz.json
@@ -12,10 +12,10 @@
   "Reset": "Tozalash",
   "Language": "Til",
   "EduType": "Shakl",
-  "NoOneUniversity": "К сожалению вы не смогли бы постутить ни в один ВУЗ",
-  "Retry": "Еще раз",
-  "UniversityList": "Посмотреть в какие вузы мог бы поступить",
-  "FinishQuiz": "Завершить",
+  "NoOneUniversity": "Afsuski, siz bironta oliygohga kiraolmas edingiz ",
+  "Retry": "Yana birbor testan o'tish",
+  "UniversityList": "Qaysi oliygohga kirishingiz mumkinligini aniqlang",
+  "FinishQuiz": "Testni tugatish",
   "Subjects": "Fanlar",
   "NoSubject": "Ma'lumot yo'q",
   "SearchPlaceHolder": "Oliygohni nomi..."
