--- a/UniInfo.Web/Resources/Views.Home.Index.ru.resx
+++ b/UniInfo.Web/Resources/Views.Home.Index.ru.resx
@@ -147,6 +147,12 @@
   <data name="MetaKeyWord" xml:space="preserve">
     <value>Поиск университетов Узбекистана,Поиск Вузов Узбекистана,Выбор Вуза по предметам,Выбор Вуза по блокам,Выбор университета по предметам,Выбор университета по блокам</value>
   </data>
+  <data name="Quiz" xml:space="preserve">
+    <value>Тест</value>
+  </data>
+  <data name="QuizDescription" xml:space="preserve">
+    <value>Пройди тест и узнай в какой ВУЗ мог бы поступить с набранным баллом</value>
+  </data>
   <data name="Search" xml:space="preserve">
     <value>Поиск</value>
     <comment>Кнопка поиска</comment>
