--- a/ClientApp/src/assets/i18n/ru.json
+++ b/ClientApp/src/assets/i18n/ru.json
@@ -18,8 +18,8 @@
   "FinishQuiz": "Завершить",
   "Subjects": "Предметы",
   "NoSubject": "Данные отсутствуют",
-  "SearchPlaceHolder": "Название университета..."
-
-
+  "SearchPlaceHolder": "Название университета...",
+  "Right":"правильно",
+  "Point": "Общий балл"
 
 }
