--- a/ClientApp/src/assets/i18n/uz.json
+++ b/ClientApp/src/assets/i18n/uz.json
@@ -18,6 +18,7 @@
   "FinishQuiz": "Testni tugatish",
   "Subjects": "Fanlar",
   "NoSubject": "Ma'lumot yo'q",
-  "SearchPlaceHolder": "Oliygohni nomi..."
-
+  "SearchPlaceHolder": "Oliygohni nomi...",
+  "Right": "to'g'ri",
+  "Point": "Umumiy ball"
 }
