some localization change, quiz navigation added

--- a/ClientApp/src/assets/i18n/ru.json
+++ b/ClientApp/src/assets/i18n/ru.json
@@ -19,7 +19,9 @@
   "Subjects": "Предметы",
   "NoSubject": "Данные отсутствуют",
   "SearchPlaceHolder": "Название университета...",
-  "Right":"правильно",
-  "Point": "Общий балл"
+  "Right": "правильно",
+  "Point": "Общий балл",
+
+  "ClearSelectedAnswer": "Очистить выбранный ответ"
 
 }
