--- a/ClientApp/src/assets/i18n/uz.json
+++ b/ClientApp/src/assets/i18n/uz.json
@@ -20,5 +20,8 @@
   "NoSubject": "Ma'lumot yo'q",
   "SearchPlaceHolder": "Oliygohni nomi...",
   "Right": "to'g'ri",
-  "Point": "Umumiy ball"
+  "Point": "Umumiy ball",
+
+  "ClearSelectedAnswer": "Tanlangan javobni tozalash"
+
 }
