--- a/UniInfo.Web/Resources/Views.Shared._Layout.uz.resx
+++ b/UniInfo.Web/Resources/Views.Shared._Layout.uz.resx
@@ -122,7 +122,7 @@
     <comment>Филиалы  зарубежных  Вузов university</comment>
   </data>
   <data name="FilterUniversity" xml:space="preserve">
-    <value>Oliygohni tanlash</value>
+    <value>Oliygohni qidirish</value>
   </data>
   <data name="LangRu" xml:space="preserve">
     <value>Ru</value>
