--- a/UniInfo.Web/Resources/Views.Home.Index.uz.resx
+++ b/UniInfo.Web/Resources/Views.Home.Index.uz.resx
@@ -151,7 +151,7 @@
     <value>Test topshirish</value>
   </data>
   <data name="QuizDescription" xml:space="preserve">
-    <value>Пройди тест и узнай в какой ВУЗ мог бы поступить с набранным баллом</value>
+    <value>Sinovdan o'ting va qaysi universitetga to'plangan bal bilan kirishingiz mumkinligini aniqlang</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Izlash</value>
